added some backbone views
Signed-off-by: Rolf Håvard Blindheim <rolf@moota.com>

--- a/apps/webclient/static/bower.json
+++ b/apps/webclient/static/bower.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "foundation": "zurb/bower-foundation",
         "requirejs": "latest",
+        "text": "latest",
         "socket.io": "latest",
         "underscore": "latest",
         "backbone": "latest",
