--- a/apps/webapp/staging/package.json
+++ b/apps/webapp/staging/package.json
@@ -5,7 +5,8 @@
     "node-sass": "~0.7.0",
     "grunt": "~0.4.1",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-sass": "~0.8.0"
+    "grunt-sass": "~0.8.0",
+    "grunt-contrib-handlebars": "~0.6.0"
   },
   "dependencies": {
     "grunt-bowercopy": "~0.6.0"
